<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, DontForgetMomActivity!</string>
    <string name="app_name">DontForgetMom</string>
    <string name="action_map">Trips</string>
    <string name="action_new">New</string>
    <string name="action_save">Save</string>
    <string name="action_about">About</string>
    <string name="action_help">Help</string>
    <string name="action_pref">Preferences</string>
    <string name="tab_old">Old trips</string>
    <string name="tab_current">Curent travel</string>
    <!-- Old trips -->
    <string name="no_trips">No trips done</string>
    <string name="old_action_replay">Replay</string>
    <string name="old_action_replay_date">When do you want to replay the trip ?</string>
    <string name="old_action_duplicate">Duplicate</string>
    <string name="old_action_edit">Edit</string>    
    <string name="old_action_delete">Delete</string>    
    <string name="old_confirm_delete">Delete selected trip</string>    
    <string name="old_confirm_delete_msg">Your are going to delete the selected trip.</string>    
    <string name="old_confirm_delete_ok">Delete</string>    
    <string name="trip_never_launch">Trip never launch</string>    
    <!-- current Trips  -->
    <string name="toggleBtnOn">ON</string>
    <string name="toggleBtnOff">OFF</string>
    <string name="control">Controls</string>
    <string name="trackOn">Stop the tracking</string>
    <string name="trackOff">Restart the tracking</string>
    <string name="call">Call</string>
    <string name="mails">Mails</string>
    <string name="sms">SMS</string>
    <string name="map">Map</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="dialogConfirmation">Send confirmation ?</string>
    <plurals name="dialogConfirmationEmail">
        <item quantity="one">Do you want to send the mail to %1$s</item>
        <item quantity="other">Do you want to send the mail to all</item>
    </plurals>
    <plurals name="dialogConfirmationSms">
        <item quantity="one">Do you want to send the sms to %1$s</item>
        <item quantity="other">Do you want to send the sms to all</item>
    </plurals>
    <!-- New -->
    <string name="tripInformation">Trip\'s informations</string>
    <string name="tripName">Trip\'s name</string>
    <string name="tripDestination">Trip\'s destination</string> 
    <string name="tripPlace">Place</string>
    <string name="tripDate">Date</string>
    <string name="tripDepartureDate">Day of departure</string>
    <string name="tripPreciseHour">Precise hour of departure</string>
    <string name="tripAlert">Alert information</string>
    <string name="tripPrecision">Precision to launch action</string>
    <string name="tripPrecisionLow">Low precision : 1km</string>
    <string name="tripPrecisionMiddle">Fair precision : 400m</string>
    <string name="tripPrecisionMHigh">High precision : 100m</string>
    <string name="tripKindAlert">Kind of alert</string>
    <string name="tripKAlertSMS">SMS alert</string>
    <string name="tripKAlertMail">Mail alert</string>
    <string name="tripKAlertMailSMS">Mail and SMS alert</string>
    <string name="tripKAlertPhone">Phone alert</string>
    <string name="tripAlertTo">Recipients</string>
    <string name="tripAlertContent">Message content</string>
    <string name="tripNoCurrentTrip">No Curent trip</string>
    <string name="defaultTripName">Trip</string>
    
    <!-- Errors -->
    <string name="error_name_empty">You have to set a name for the trip</string>
    <string name="error_desination_empty">You have to set a destination</string>
    <string name="error_recipients_empty">You have to set at least one recipient</string>
    <string name="error_multiple_recipients_phone">You cannot have multiple recipients if you choose the phone alert</string>
    <string name="error_message_empty">You have to set a message</string>
    
    <!-- Preferences -->
    <string name="pref_cat">Action</string>
    <string name="pref_automatic_send_key">dont.forget.mom.pref.autosend</string>
    <string name="pref_automatic_send_default_value">true</string>
    <string name="pref_automatic_send_title">Automatic send</string>
    <string name="pref_automatic_send_desc">When this option is checked, you message is automaticly send you arrived at destination. Else a confirmation notification is showed to you</string>
    <string name="pref_defaut_message_key">dont.forget.mom.pref.message</string>
    <string name="pref_default_message_value">0</string>
    <string name="pref_default_message_title">Default message to send</string>
    <string name="pref_default_message_desc">You can choose a default message to use when you plannify a trip. If the field is empty, you can enter your custom message</string>
    <string name="pref_defaut_subject_key">dont.forget.mom.pref.subject</string>
    <string name="pref_default_subject_value">0</string>
    <string name="pref_default_subject_title">Default subject of message</string>
    <string name="pref_default_subject_desc">You can choose a default subject to use when you plannify a trip. This field is only use when you choose a email alert.</string>
    
   	<string-array name="pref_message_array">
		<item> </item>
		<item>I\'m well arrived</item>
		<item>I\'ve just arrived, the trip went well</item>
	</string-array>
   	<string-array name="pref_subject_array">
		<item>[Dont forget mom] : I\'m arrived</item>
		<item>I\'m well arrived</item>
		<item>I\'ve just arrived, the trip went well</item>
	</string-array>
   	<string-array name="pref_message_array_code">
		<item>0</item>
		<item>1</item>
		<item>2</item>
	</string-array>
    
    

</resources>