<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 * Copyright (C) 2012 Binomed (http://blog.binomed.fr)
 *
 * Licensed under the Eclipse Public License - v 1.0;
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.eclipse.org/legal/epl-v10.html
 *
 * THE ACCOMPANYING PROGRAM IS PROVIDED UNDER THE TERMS OF THIS ECLIPSE PUBLIC 
 * LICENSE ("AGREEMENT"). ANY USE, REPRODUCTION OR DISTRIBUTION OF THE PROGRAM 
 * CONSTITUTES RECIPIENT'S ACCEPTANCE OF THIS AGREEMENT.
 */ 
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="6dip" >

    <Button
        android:id="@+id/home_btn_map"
        style="@style/HomeButton"
        android:drawableLeft="@drawable/ic_trips"
        android:text="@string/action_map" />

    <Button
        android:id="@+id/home_btn_new"
        style="@style/HomeButton"
        android:drawableLeft="@drawable/ic_new2"
        android:text="@string/action_new" />

    <Button
        android:id="@+id/home_btn_about"
        style="@style/HomeButton"
        android:drawableLeft="@drawable/ic_about2"
        android:text="@string/action_about" />

    <Button
        android:id="@+id/home_btn_help"
        style="@style/HomeButton"
        android:drawableLeft="@drawable/ic_help"
        android:text="@string/action_help" />

</LinearLayout>