<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 * Copyright (C) 2012 Binomed (http://blog.binomed.fr)
 *
 * Licensed under the Eclipse Public License - v 1.0;
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.eclipse.org/legal/epl-v10.html
 *
 * THE ACCOMPANYING PROGRAM IS PROVIDED UNDER THE TERMS OF THIS ECLIPSE PUBLIC 
 * LICENSE ("AGREEMENT"). ANY USE, REPRODUCTION OR DISTRIBUTION OF THE PROGRAM 
 * CONSTITUTES RECIPIENT'S ACCEPTANCE OF THIS AGREEMENT.
 */ 
 -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

<RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

          <AutoCompleteTextView
              android:id="@+id/placeEdit"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
           	  android:layout_marginTop="10dip" 
              android:layout_marginRight="10dip"
              android:layout_marginLeft="10dip"
              android:layout_gravity="center_vertical"
              android:inputType="text"
              android:hint="@string/tripDestination"
              android:lines="1"
              />
         <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/placeEdit"
            android:text="@string/tripDepartureDate"
            style="@style/Title" />
        <ImageView 
            android:id="@+id/separatorDate"
            style="@style/Separator"
            android:layout_below="@+id/date"
            />
        <Button 
             android:id="@+id/btnDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="10dip"
            android:layout_marginLeft="20dip"
            android:layout_below="@+id/separatorDate"
            android:onClick="onClick"
            />
        <TextView
            android:id="@+id/precisionTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnDate"
            android:text="@string/tripPrecision"
            style="@style/Title" />
        <ImageView 
            android:id="@+id/separatorPrecision"
           style="@style/Separator"
            android:layout_below="@+id/precisionTxt"
            />
        <SeekBar 
            android:id="@+id/seekPrecision"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_below="@+id/separatorPrecision"
            />
        <TextView
            android:id="@+id/lblPrecision"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:layout_marginLeft="10dip"
            android:layout_below="@+id/seekPrecision"
            android:text="@string/tripPrecisionLow"/>
         <TextView
            android:id="@+id/kindAlertTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lblPrecision"
            android:text="@string/tripKindAlert"
            style="@style/Title"/>
        <ImageView 
            android:id="@+id/separatorAlertKind"
            style="@style/Separator"
            android:layout_below="@+id/kindAlertTxt"
            />
        <CheckBox
            android:id="@+id/alertSMS"
           	android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:layout_marginLeft="20dip"
            android:layout_below="@+id/separatorAlertKind"
            android:text="@string/tripKAlertSMS" 
            />
        <CheckBox
            android:id="@+id/alertMail"
          	android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/alertSMS"
            android:layout_marginTop="5dip"
            android:layout_marginLeft="20dip"
            android:text="@string/tripKAlertMail"
              />
          <CheckBox
            android:id="@+id/alertPhone"
          	android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:layout_marginLeft="20dip"
            android:layout_below="@+id/alertMail"
            android:text="@string/tripKAlertPhone"
             />
        <!-- 
        <RadioGroup 
            android:id="@+id/radioGroupAlert"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:layout_marginLeft="20dip"
            android:layout_below="@+id/separatorAlertKind"
            >
            <RadioButton
                 android:id="@+id/alertSMS"
            	 android:layout_width="fill_parent"
	             android:layout_height="wrap_content"
	             android:layout_marginTop="5dip"
	             android:text="@string/tripKAlertSMS"
                />
            <RadioButton
                 android:id="@+id/alertMail"
            	 android:layout_width="fill_parent"
	             android:layout_height="wrap_content"
	             android:layout_marginTop="5dip"
	             android:text="@string/tripKAlertMail"
                />
            <RadioButton
                 android:id="@+id/alertMailSMS"
            	 android:layout_width="fill_parent"
	             android:layout_height="wrap_content"
	             android:layout_marginTop="5dip"
	             android:text="@string/tripKAlertMailSMS"
                />
            <RadioButton
                 android:id="@+id/alertPhone"
            	 android:layout_width="fill_parent"
	             android:layout_height="wrap_content"
	             android:layout_marginTop="5dip"
	             android:text="@string/tripKAlertPhone"
                />
        </RadioGroup>
         -->
           <MultiAutoCompleteTextView
               android:id="@+id/recipients"
               android:layout_width="fill_parent"
               android:layout_height="wrap_content"
            android:layout_below="@+id/alertPhone"
            android:layout_marginTop="10dip" 
               android:layout_marginRight="10dip"
               android:layout_marginLeft="10dip"
               android:layout_gravity="center_vertical"
               android:inputType="text"
               android:hint="@string/tripAlertTo"
               android:lines="1"
               />

        <EditText
            android:id="@+id/messageContent"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
               android:layout_marginRight="10dip"
               android:layout_marginLeft="10dip"
            android:layout_marginTop="10dip"
            android:layout_below="@+id/recipients"
            android:hint="@string/tripAlertContent"
            android:inputType="textMultiLine" >

        </EditText>
                    
    </RelativeLayout>
</ScrollView>